# cae-lab

./: LICENSE  README.md
finasgmt/: IsaSim.java  Makefile  README.md
finasgmt/IsaSimCPPTemplate/: CMakeLists.txt  IsaSim.cpp  README.md
finasgmt/IsaSimCPPTemplate/src/: example.cpp  example.h
finasgmt/src/main/scala/: SingleCycleRiscV.scala
finasgmt/src/test/scala/: SingleCycleRiscVTester.scala
finasgmt/tests/task1/: addlarge.res  addlarge.s  addneg.res  addneg.s  addpos.res  addpos.s  bool.res  bool.s  set.res  set.s  shift.res  shift.s  shift2.res  shift2.s
finasgmt/tests/task2/: branchcnt.res  branchcnt.s  branchmany.res  branchmany.s  branchtrap.res  branchtrap.s
finasgmt/tests/task3/: loop.c  loop.res  loop.s  recursive.c  recursive.res  recursive.s  string.res  string.s  width.res  width.s
finasgmt/tests/task4/: t1.res  t1.s  t10.s  t11.s  t12.c  t12.res  t13.c  t13.res  t14.res  t14.s  t15.res  t15.s  t2.s  t3.s  t4.s  t5.s  t6.res  t6.s  t7.s  t8.s  t9.res  t9.s
lab2/: README.md  hello.s  io.s  minimal.s
lab3/: README.md  fact.s  io.s  minimal.s
lab4/: README.md  add.s  fact.s
lab5/: README.md
lab6/: README.md
lab7/: README.md
snippets/: README.md  add.s
